--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.vidaalemdasgrades</groupId>
 	<artifactId>vidaalemdasgrades</artifactId>
-	<version>1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>vidaalemdasgrades</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
